# creative-projects

Chapter02/json_dynamic/: Cargo.toml
Chapter02/json_dynamic/src/: main.rs
Chapter02/json_static/: Cargo.toml
Chapter02/json_static/src/: main.rs
Chapter02/postgresql_example/: Cargo.toml
Chapter02/postgresql_example/src/: main.rs
Chapter02/sqlite_example/: Cargo.toml  my_db.db3
Chapter02/sqlite_example/src/: main.rs
Chapter02/toml_dynamic/: Cargo.toml
Chapter02/toml_dynamic/src/: main.rs
Chapter02/toml_static/: Cargo.toml
Chapter02/toml_static/src/: main.rs
Chapter02/xml_read/: Cargo.toml
Chapter02/xml_read/src/: main.rs
